--- a/lab03-test/lab03-test.cbp
+++ b/lab03-test/lab03-test.cbp
@@ -34,6 +34,8 @@
 		<Unit filename="../histogram.cpp" />
 		<Unit filename="../histogram.h" />
 		<Unit filename="../test.cpp" />
+		<Unit filename="svg.cpp" />
+		<Unit filename="svg.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
